--- a/quotes/fence-adjust.html
+++ b/quotes/fence-adjust.html
@@ -246,64 +246,20 @@ We regularly work on residential gardens, new builds, rental properties, and com
 All installations are carried out with proper ground preparation, accurate levels, and secure fixings.
 </p>
 
-<h2>What This Calculator Includes</h2>
-<p>
-This calculator gives you an instant estimated price based on your fence length, bespoke height, posts, panels, gravel boards,
-ground conditions, hedges, trees and gates. It calculates materials and labour so you can understand what goes into your price
-before booking.
-</p>
+<h2>FAQ</h2>
+<div>
+<h3>Which areas do you cover?</h3>
+<p>We serve Askern DN6 and a six mile radius including surrounding villages.</p>
 
-<p>
-If your fence runs over mixed ground such as soil and concrete, you can enter how many panels sit on each surface.
-Concrete ground requires extra work and is priced accordingly.
-Heavy rooted ground also requires more labour and is included in the calculation.
-</p>
+<h3>Are your services insured?</h3>
+<p>Yes, all services are fully insured for peace of mind.</p>
 
-<h2>Gates, Access and Custom Layouts</h2>
-<p>
-You can add as many gates as you need. Gates can be single or double, built as part of the fence line or as a standalone
-garden entrance. If a gate is part of the fence, the calculator automatically deducts the fence materials and labour that
-are replaced by the gate.
-</p>
+<h3>Can I book multiple services?</h3>
+<p>Yes, multiple services can be booked together.</p>
 
-<p>
-Gate prices are calculated by width in metres, allowing you to design your access exactly how you want it rather than
-being forced into standard sizes.
-</p>
-
-<h2>Hedges, Trees and Site Clearance</h2>
-<p>
-If hedges need removing to install your fence, you can add the total length in metres and this will be priced automatically.
-</p>
-
-<p>
-If trees are present, you can enter their height. Trees under 3 metres are priced directly in the calculator.
-Trees over 3 metres require specialist equipment and will be quoted as a separate tree felling service.
-</p>
-
-<h2>Why Choose Featheredge Fencing</h2>
-<p>
-Featheredge fencing is one of the strongest and most flexible fencing systems available.
-It allows for sloping ground, uneven levels and custom heights while remaining secure and long-lasting.
-Combined with concrete posts and gravel boards, it offers excellent resistance to rot, moisture and storm damage.
-</p>
-
-<p>
-This type of fencing is ideal for gardens, driveways, side boundaries, commercial yards and rural properties.
-It can be painted or stained to match your property and easily repaired if individual boards are ever damaged.
-</p>
-
-<h2>Serving Askern and Surrounding Areas</h2>
-<p>
-We provide fence installation across Askern and all areas within a six mile radius.
-This includes surrounding villages, housing estates, rural properties and new developments.
-Our local knowledge allows us to price fairly, arrive quickly, and complete work efficiently.
-</p>
-
-<p>
-If you are unsure about any option in the calculator, you can still submit your estimate and we will confirm
-everything with you before work begins.
-</p>
+<h3>Do you provide free consultations?</h3>
+<p>Yes, we offer free consultations to assess requirements and provide accurate quotes.</p>
+</div>
 
 </main>
 
