--- a/head-foot.html
+++ b/head-foot.html
@@ -92,60 +92,59 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 <section style="margin-bottom:40px; text-align:center;">
 <h2>Title 1</h2>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-<img src="/images/placeholder1.webp" alt="Placeholder Image 1" style="max-width:100%; height:auto; margin-top:15px;">
+<img src="/images/placeholder1.webp" alt="Place your alt text here" style="max-width:100%; height:auto; margin-top:15px;">
 </section>
 
 <!-- Section 2 -->
 <section style="margin-bottom:40px; text-align:center;">
 <h2>Title 2</h2>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-<img src="/images/placeholder2.webp" alt="Placeholder Image 2" style="max-width:100%; height:auto; margin-top:15px;">
+<img src="/images/placeholder2.webp" alt="Place your alt text here" style="max-width:100%; height:auto; margin-top:15px;">
 </section>
 
 <!-- Section 3 -->
 <section style="margin-bottom:40px; text-align:center;">
 <h2>Title 3</h2>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-<img src="/images/placeholder3.webp" alt="Placeholder Image 3" style="max-width:100%; height:auto; margin-top:15px;">
+<img src="/images/placeholder3.webp" alt="Place your alt text here" style="max-width:100%; height:auto; margin-top:15px;">
 </section>
 
 <!-- Section 4 -->
 <section style="margin-bottom:40px; text-align:center;">
 <h2>Title 4</h2>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-<img src="/images/placeholder4.webp" alt="Placeholder Image 4" style="max-width:100%; height:auto; margin-top:15px;">
+<img src="/images/placeholder4.webp" alt="Place your alt text here" style="max-width:100%; height:auto; margin-top:15px;">
 </section>
 
 <!-- Section 5 -->
 <section style="margin-bottom:40px; text-align:center;">
 <h2>Title 5</h2>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-<img src="/images/placeholder5.webp" alt="Placeholder Image 5" style="max-width:100%; height:auto; margin-top:15px;">
+<img src="/images/placeholder5.webp" alt="Place your alt text here" style="max-width:100%; height:auto; margin-top:15px;">
 </section>
 
 <!-- Section 6 -->
 <section style="margin-bottom:40px; text-align:center;">
 <h2>Title 6</h2>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-<img src="/images/placeholder6.webp" alt="Placeholder Image 6" style="max-width:100%; height:auto; margin-top:15px;">
+<img src="/images/placeholder6.webp" alt="Place your alt text here" style="max-width:100%; height:auto; margin-top:15px;">
 </section>
 
 <!-- Section 7 -->
 <section style="margin-bottom:40px; text-align:center;">
 <h2>Title 7</h2>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-<img src="/images/placeholder7.webp" alt="Placeholder Image 7" style="max-width:100%; height:auto; margin-top:15px;">
+<img src="/images/placeholder7.webp" alt="Place your alt text here" style="max-width:100%; height:auto; margin-top:15px;">
 </section>
 
 <!-- Section 8 -->
 <section style="margin-bottom:40px; text-align:center;">
 <h2>Title 8</h2>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-<img src="/images/placeholder8.webp" alt="Placeholder Image 8" style="max-width:100%; height:auto; margin-top:15px;">
+<img src="/images/placeholder8.webp" alt="Place your alt text here" style="max-width:100%; height:auto; margin-top:15px;">
 </section>
 
-</main> 
-
+</main>
 
 <!-- ✅ FOOTER -->
 <footer class="site-footer">
