--- a/head-foot.html
+++ b/head-foot.html
@@ -144,6 +144,52 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 <img src="/images/placeholder8.webp" alt="Place your alt text here" style="max-width:100%; height:auto; margin-top:15px;">
 </section>
 
+<!-- ✅ FAQ SECTION -->
+<section style="max-width:900px; margin:40px auto; padding:0 15px;">
+
+<h2 style="text-align:center; margin-bottom:30px;">Frequently Asked Questions</h2>
+
+<div>
+<p><strong>Question 1?</strong><br>
+Answer goes here.</p>
+
+<p><strong>Question 2?</strong><br>
+Answer goes here.</p>
+
+<p><strong>Question 3?</strong><br>
+Answer goes here.</p>
+
+<p><strong>Question 4?</strong><br>
+Answer goes here.</p>
+
+<p><strong>Question 5?</strong><br>
+Answer goes here.</p>
+
+<p><strong>Question 6?</strong><br>
+Answer goes here.</p>
+
+<p><strong>Question 7?</strong><br>
+Answer goes here.</p>
+
+<p><strong>Question 8?</strong><br>
+Answer goes here.</p>
+
+<p><strong>Question 9?</strong><br>
+Answer goes here.</p>
+
+<p><strong>Question 10?</strong><br>
+Answer goes here.</p>
+
+<p><strong>Question 11?</strong><br>
+Answer goes here.</p>
+
+<p><strong>Question 12?</strong><br>
+Answer goes here.</p>
+</div>
+
+</section>
+
+
 </main>
 
 <!-- ✅ FOOTER -->
