--- a/head-foot.html
+++ b/head-foot.html
@@ -189,6 +189,11 @@ Answer goes here.</p>
 
 </section>
 
+<!-- ✅ BOTTOM CALL BUTTON -->
+<div style="text-align:center; margin:40px 0;">
+<a href="tel:07735873694" class="call-btn">📞 Call Now: 07735 873694</a>
+</div>
+
 
 </main>
 
