--- a/head-foot.html
+++ b/head-foot.html
@@ -10,7 +10,7 @@
 <link rel="canonical" href="https://homerepairs4u.com/">
 <meta name="description" content="ADD META">
 
-<link rel="preload" as="image" href="/images/home-repairs-4u.webp" />
+<link rel="preload" as="image" href="/images/home-repairs-4u-doncaster.webp" />
 <style>
 /* HEADER STYLING */
 header{
