--- a/head-foot.html
+++ b/head-foot.html
@@ -79,7 +79,7 @@ document.getElementById("lightbox").style.display="none";
 
 <!-- ✅ HEADER -->
 <header>
-<img src="/images/logo.webp"
+<img src="/images/home-repairs-4u-doncaster.webp"
 alt="Home Repairs 4U logo"
 class="logo"
 width="600" height="200"
